# sd-scripts-docker

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  TODO.md  batch.sh  docker-compose.yml  entrypoint.sh  pyproject.toml
config/: config.toml  dataset.toml  run.command
services/download/: Dockerfile  download.sh
services/tag/: Dockerfile  pyproject.toml
services/tag/config/: run.command
services/train/: Dockerfile  pyproject.toml
services/train/config/: accelerate.config  dataset.toml  run.command
