[tool.poetry]
name = "sd-scripts"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.9" # Fixed for numpy installation
torch = [
  { url = "https://download.pytorch.org/whl/cu117/torch-2.0.1%2Bcu117-cp310-cp310-linux_x86_64.whl" }
]
torchvision = [
  { url = "https://download.pytorch.org/whl/cu117/torchvision-0.15.2%2Bcu117-cp310-cp310-linux_x86_64.whl" }
]
xformers = "0.0.21"
accelerate = "0.19.0"
diffusers = {version = "0.10.2", extras = ["torch"]}
transformers = {version = "*", extras = ["torch"]}
ftfy = "*"
albumentations = "*"
opencv-python = "*"
einops = "*"
pytorch-lightning = "*"
safetensors = "*"
easygui = "*"
toml = "*"
voluptuous = "*"
huggingface-hub = "*"
bitsandbytes = "*"
tensorboard = "*"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
