[tool.poetry]
name = "sd-scripts"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.9"
torch = [
  { url = "https://download.pytorch.org/whl/torch-2.0.1-cp310-cp310-manylinux2014_aarch64.whl", markers = "sys_platform == 'linux' and platform_machine == 'aarch64'" }
]
torchvision = "==0.15.2"
accelerate = "0.15.0"
transformers = "4.26.0"
ftfy = "*"
albumentations = "*"
opencv-python = "*"
einops = "*"
diffusers = {extras = ["torch"], version = "*"}
pytorch-lightning = "*"
safetensors = "*"
easygui = "*"
toml = "*"
voluptuous = "*"
huggingface-hub = "*"
typing-extensions = "*"
bitsandbytes = "*"
tensorflow = "*"
tensorboard = "*"
xformers = "0.0.20"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
